Tools/GL_Header/shaderc/shaderc.pp


function shaderc_compile_into_spv(compiler:Tshaderc_compiler_t; source_text:Pchar; source_text_size:Tsize_t; shader_kind:Tshaderc_shader_kind; input_file_name:Pchar; 
           entry_point_name:Pchar; additional_options:Tshaderc_compile_options_t):Tshaderc_compilation_result_t;cdecl;external;
{ Like shaderc_compile_into_spv, but the result contains SPIR-V assembly text }
{ instead of a SPIR-V binary module.  The SPIR-V assembly syntax is as defined }
{ by the SPIRV-Tools open source project. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function shaderc_compile_into_spv_assembly(compiler:Tshaderc_compiler_t; source_text:Pchar; source_text_size:Tsize_t; shader_kind:Tshaderc_shader_kind; input_file_name:Pchar; 
           entry_point_name:Pchar; additional_options:Tshaderc_compile_options_t):Tshaderc_compilation_result_t;cdecl;external;
{ Like shaderc_compile_into_spv, but the result contains preprocessed source }
{ code instead of a SPIR-V binary module }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function shaderc_compile_into_preprocessed_text(compiler:Tshaderc_compiler_t; source_text:Pchar; source_text_size:Tsize_t; shader_kind:Tshaderc_shader_kind; input_file_name:Pchar; 
           entry_point_name:Pchar; additional_options:Tshaderc_compile_options_t):Tshaderc_compilation_result_t;cdecl;external;
{ Takes an assembly string of the format defined in the SPIRV-Tools project }
{ (https://github.com/KhronosGroup/SPIRV-Tools/blob/master/syntax.md), }
{ assembles it into SPIR-V binary and a shaderc_compilation_result will be }
{ returned to hold the results. }
{ The assembling will pick options suitable for assembling specified in the }
{ additional_options parameter. }
{ May be safely called from multiple threads without explicit synchronization. }
{ If there was failure in allocating the compiler object, null will be }
{ returned. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function shaderc_assemble_into_spv(compiler:Tshaderc_compiler_t; source_assembly:Pchar; source_assembly_size:Tsize_t; additional_options:Tshaderc_compile_options_t):Tshaderc_compilation_result_t;cdecl;external;
{ The following functions, operating on shaderc_compilation_result_t objects, }
{ offer only the basic thread-safety guarantee. }
{ Releases the resources held by the result object. It is invalid to use the }
{ result object for any further operations. }
procedure shaderc_result_release(result:Tshaderc_compilation_result_t);cdecl;external;
{ Returns the number of bytes of the compilation output data in a result }
{ object. }
(* Const before type ignored *)
function shaderc_result_get_length(result:Tshaderc_compilation_result_t):Tsize_t;cdecl;external;
{ Returns the number of warnings generated during the compilation. }
(* Const before type ignored *)
function shaderc_result_get_num_warnings(result:Tshaderc_compilation_result_t):Tsize_t;cdecl;external;
{ Returns the number of errors generated during the compilation. }
(* Const before type ignored *)
function shaderc_result_get_num_errors(result:Tshaderc_compilation_result_t):Tsize_t;cdecl;external;
{ Returns the compilation status, indicating whether the compilation succeeded, }
{ or failed due to some reasons, like invalid shader stage or compilation }
{ errors. }
(* Const before type ignored *)
function shaderc_result_get_compilation_status(para1:Tshaderc_compilation_result_t):Tshaderc_compilation_status;cdecl;external;
{ Returns a pointer to the start of the compilation output data bytes, either }
{ SPIR-V binary or char string. When the source string is compiled into SPIR-V }
{ binary, this is guaranteed to be castable to a uint32_t*. If the result }
{ contains assembly text or preprocessed source text, the pointer will point to }
{ the resulting array of characters. }
(* Const before type ignored *)
(* Const before type ignored *)
function shaderc_result_get_bytes(result:Tshaderc_compilation_result_t):Pchar;cdecl;external;
{ Returns a null-terminated string that contains any error messages generated }
{ during the compilation. }
(* Const before type ignored *)
(* Const before type ignored *)
function shaderc_result_get_error_message(result:Tshaderc_compilation_result_t):Pchar;cdecl;external;
{ Provides the version & revision of the SPIR-V which will be produced }
procedure shaderc_get_spv_version(version:Pdword; revision:Pdword);cdecl;external;
{ Parses the version and profile from a given null-terminated string }
{ containing both version and profile, like: '450core'. Returns false if }
{ the string can not be parsed. Returns true when the parsing succeeds. The }
{ parsed version and profile are returned through arguments. }
(* Const before type ignored *)
function shaderc_parse_version_profile(str:Pchar; version:Plongint; profile:Pshaderc_profile):Tbool;cdecl;external;
{ C++ end of extern C conditionnal removed }
{ __cplusplus }
{$endif}
{ SHADERC_SHADERC_H_ }

implementation


end.
